Update SearchJerseySteps.java
All acceptance tests passing for US003